--- a/index.html
+++ b/index.html
@@ -18,10 +18,20 @@
 </head>
 
 <body>
+
+    <div class="container">
+        <div class="row" id="stuff"></div>
+    </div><!-- /.container -->
+
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="app/bower_components/react/JSXTransformer.js"></script>
+    <!-- bower:js -->
+    <script src="app/bower_components/jquery/dist/jquery.js"></script>
     <script src="app/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-    <script src="app/assets/js/main.js"></script>
+    <script src="app/bower_components/react/react.js"></script>
+    <!-- endbower -->
+    <script src="app/assets/js/main.js" type="text/jsx"></script>
+
 </body>
 
 </html>
