more babel code

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="app/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
     <script src="app/bower_components/react/react.js"></script>
     <!-- endbower -->
-    <script src="app/assets/js/main.js" type="text/jsx"></script>
+    <script src="build/js/main.js" type="text/jsx"></script>
 
 </body>
 
