--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lastoftype Boilerplate</title>
     <!-- Bootstrap -->
+    <!-- bower:css -->
+    <!-- endbower -->
     <link rel="stylesheet" href="app/assets/css/vendors.css">
+    <link rel="stylesheet" href="app/bower_components/fontawesome/css/font-awesome.css">
     <link href="app/assets/css/main.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,8 +23,18 @@
 <body>
 
     <div class="container">
-        <div class="row" id="stuff"></div>
+        <div class="col-md-8 col-md-offset-2">
+            <div class="row" id="quiz"></div>
+        </div>
     </div><!-- /.container -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div id="example"></div>
+            </div>
+        </div>
+    </div>
 
     <!-- jQuery -->
     <script src="app/bower_components/react/JSXTransformer.js"></script>
