--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lastoftype Boilerplate</title>
+    <title>Maps Demo</title>
     <!-- Bootstrap -->
     <!-- bower:css -->
     <!-- endbower -->
     <link rel="stylesheet" href="app/assets/css/vendors.css">
     <link rel="stylesheet" href="app/bower_components/fontawesome/css/font-awesome.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link href="app/assets/css/main.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,30 +22,28 @@
 </head>
 
 <body>
-
-    <div class="container">
-        <div class="col-md-8 col-md-offset-2">
-            <div class="row" id="quiz"></div>
-        </div>
-    </div><!-- /.container -->
-
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <div id="example"></div>
-            </div>
+            <h1 class="text-center">This is the map</h1>
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div id="container" style="position: relative; width: 100%; height: auto;"></div>
+            </div>
+            <!-- /.col-md-12 -->
+        </div>
+        <!-- /.row -->
     </div>
-
-    <!-- jQuery -->
-    <script src="app/bower_components/react/JSXTransformer.js"></script>
+    <!-- /.container -->
     <!-- bower:js -->
     <script src="app/bower_components/jquery/dist/jquery.js"></script>
     <script src="app/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-    <script src="app/bower_components/react/react.js"></script>
+    <script src="app/bower_components/d3/d3.js"></script>
+    <script src="app/bower_components/topojson/topojson.js"></script>
+    <script src="app/bower_components/datamaps/dist/datamaps.all.js"></script>
     <!-- endbower -->
-    <script src="build/js/main.js" type="text/jsx"></script>
-
+    <script src="app/assets/js/datamaps.usa.min.js"></script>
+    <script src="app/assets/js/main.js"></script>
 </body>
 
 </html>
